--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   </nav>
   <!-- 菜单抽屉 -->
   <div class="menu-drawer" id="menuDrawer">
-    <a class="menu-link" href="#">Home</a>
+    <a class="menu-link" href="https://shop.rhb.co.com">Home</a>
     <a class="menu-link" href="#">Shop</a>
     <a class="menu-link" href="#">Lookbook</a>
     <a class="menu-link" href="#">Contact</a>
