--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
   </nav>
   <!-- 菜单抽屉 -->
   <div class="menu-drawer" id="menuDrawer">
-    <a class="menu-link" href="https://shop.rhb.co.com">Home</a>
-    <a class="menu-link" href="#">Shop</a>
-    <a class="menu-link" href="#">Lookbook</a>
-    <a class="menu-link" href="#">Contact</a>
+    <a class="menu-link" href="/">Home</a>
+    <a class="menu-link" href="https://shop.rhb.co.com">Shop</a>
+    <a class="menu-link" href="#Lookbook">Lookbook</a>
+    <a class="menu-link" href="#Contact">Contact</a>
   </div>
   <!-- HERO SLIDER -->
   <div class="hero-slider" id="heroSlider">
