--- a/index.html
+++ b/index.html
@@ -234,18 +234,14 @@
   <!-- HERO SLIDER -->
   <div class="hero-slider" id="heroSlider">
     <!-- slides: 可添加多张大图+文本 -->
-    <div class="slide active" style="background-image:url('IMG_5335.jpg')">
+    <div class="slide active" style="background-image:url('IMG_5297.jpg')">
       <div class="slide-txt">THIS IS NOT JUST A SHOE.<br>IT'S A SCULPTURE YOU WALK IN.</div>
     </div>
-    <div class="slide" style="background-image:url('IMG_5326.jpg')">
+    <div class="slide" style="background-image:url('IMG_5369.jpg')">
       <div class="slide-txt">BLACK FLUIDITY<br><span style="font-size:1.3rem;font-family:'Inter',sans-serif;opacity:.7;">The unpredictable form of style</span></div>
     </div>
-    <div class="slide" style="background-image:url('IMG_5067.jpg')">
+    <div class="slide" style="background-image:url('3.jpg')">
       <div class="slide-txt">MONOCHROME, BUT NEVER MONOTONE</div>
-    </div>
-    <div class="slide" style="background-image:url('IMG_5092.jpg')">
-      <div class="slide-txt">CONCEPTUAL FOOTWEAR<br><span style="font-size:1.3rem;font-family:'Inter',sans-serif;opacity:.7;">Minimalism meets sculpture</span></div>
-    </div>
     <!-- 你可以根据需要添加更多slide，图片链接改成自己的 -->
     <div class="slider-dots" id="sliderDots"></div>
   </div>
