--- a/index.html
+++ b/index.html
@@ -251,6 +251,38 @@
   <div class="slider-dots" id="sliderDots"></div>
 </div>
   <script>
+const slides = document.querySelectorAll('.slide');
+const dotsContainer = document.getElementById('sliderDots');
+let curIdx = 0, timer;
+
+function renderDots() {
+  dotsContainer.innerHTML = '';
+  slides.forEach((_, i) => {
+    const dot = document.createElement('span');
+    dot.className = 'slider-dot' + (i === curIdx ? ' active' : '');
+    dot.addEventListener('click', () => {
+      showSlide(i);
+    });
+    dotsContainer.appendChild(dot);
+  });
+}
+
+function showSlide(idx) {
+  curIdx = idx;
+  slides.forEach((s, i) => s.classList.toggle('active', i === curIdx));
+  renderDots();
+}
+
+function nextSlide() {
+  curIdx = (curIdx + 1) % slides.length;
+  showSlide(curIdx);
+}
+
+renderDots();
+timer = setInterval(nextSlide, 5000);
+</script>
+
+  <script>
     // HERO SLIDER
     const slides = document.querySelectorAll('.slide');
     const dotsContainer = document.getElementById('sliderDots');
