--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
   <div class="menu-drawer" id="menuDrawer">
     <a class="menu-link" href="/">Home</a>
     <a class="menu-link" href="https://shop.rhb.co.com">Shop</a>
-    <a class="menu-link" href="#Lookbook">Lookbook</a>
-    <a class="menu-link" href="#Contact">Contact</a>
+    <a class="menu-link" href="lookbook.html">Lookbook</a>
+    <a class="menu-link" href="contact.html">Contact</a>
   </div>
   <!-- HERO SLIDER -->
 <div class="hero-slider" id="heroSlider">
