--- a/index.html
+++ b/index.html
@@ -283,35 +283,32 @@ function nextSlide() {
 renderDots();
 timer = setInterval(nextSlide, 10000);
 
-// ===== RHB 导航栏菜单完整JS =====
-
-// 获取元素
 const menuBtn = document.getElementById('menuBtn');
 const menuDrawer = document.getElementById('menuDrawer');
 let menuOpen = false;
 
-// 1. 点击按钮切换菜单（阻止冒泡，防止点开就又被关）
+// 点击按钮开关菜单
 menuBtn.addEventListener('click', function(e) {
   e.stopPropagation();
   menuOpen = !menuOpen;
   menuDrawer.classList.toggle('active', menuOpen);
 });
 
-// 2. 点菜单抽屉内任何地方都能关闭菜单（含链接、空白）
-//   若你想点链接后不关闭，请用 class 判断，只关空白
+// 点菜单任何地方关闭菜单
 menuDrawer.addEventListener('click', function(e) {
   menuDrawer.classList.remove('active');
   menuOpen = false;
   e.stopPropagation();
 });
 
-// 3. 按ESC关闭菜单
+// 按ESC关闭菜单
 document.addEventListener('keydown', function(e) {
   if (e.key === "Escape" && menuOpen) {
     menuDrawer.classList.remove('active');
     menuOpen = false;
   }
 });
+
 
 
   </script>
