--- a/lookbook.html
+++ b/lookbook.html
@@ -53,7 +53,55 @@
   </style>
 </head>
 <body>
-  <!-- 可粘贴你的navbar导航栏代码在这里，保证和首页风格一致 -->
+ /* HAMBURGER */
+    .hamburger {
+      width: 38px; height: 38px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      background: none;
+      border: none;
+      z-index: 999;
+      position: relative;
+    }
+    .hamburger span {
+      display: block;
+      width: 28px;
+      height: 3px;
+      background: var(--white);
+      margin: 4px 0;
+      border-radius: 2px;
+      transition: 0.3s;
+    }
+    .menu-drawer {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(24,24,24,0.92);
+      z-index: 30;
+      display: none;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      padding: 80px 48px 48px 48px;
+      animation: menuFade 0.4s;
+    }
+    .menu-drawer.active { display: flex; }
+    .menu-drawer .menu-link {
+      color: var(--white);
+      font-size: 2.2rem;
+      font-family: 'DM Serif Display', serif;
+      margin: 0 0 18px 0;
+      opacity: 0.92;
+      text-decoration: none;
+      letter-spacing: 0.03em;
+      transition: color 0.2s;
+    }
+    .menu-drawer .menu-link:hover { color: var(--gray); }
+    @keyframes menuFade {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
 
   <div class="lookbook-title">LOOKBOOK</div>
   <div class="lookbook-gallery">
