--- a/lookbook.html
+++ b/lookbook.html
@@ -6,54 +6,48 @@
   <title>RHB Lookbook</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=Inter:wght@400;600&display=swap">
   <style>
+    :root {
+      --black: #181818;
+      --white: #fff;
+      --gray: #b8b8b8;
+      --header-h: 60px;
+      --radius: 14px;
+    }
     body {
-      background: #181818;
-      color: #fff;
+      background: var(--black);
+      color: var(--white);
       font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
       margin: 0; padding: 0;
       min-height: 100vh;
       letter-spacing: 0.02em;
     }
-    .navbar { /* 可粘贴你首页的navbar样式和结构 */ }
-    .lookbook-title {
+    .navbar {
+      position: fixed;
+      top: 0; left: 0; width: 100vw; height: var(--header-h);
+      z-index: 20;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: rgba(24,24,24, 0.2);
+      backdrop-filter: blur(8px);
+      padding: 0 36px;
+      box-sizing: border-box;
+    }
+    .nav-left, .nav-right {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+    }
+    .logo {
       font-family: 'DM Serif Display', serif;
-      font-size: 2.6rem;
-      text-align: center;
-      margin: 70px 0 36px 0;
-      letter-spacing: 0.04em;
+      font-size: 2.1rem;
       font-weight: 600;
+      letter-spacing: 0.03em;
+      color: var(--white);
+      cursor: pointer;
+      user-select: none;
     }
-    .lookbook-gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 34px;
-      padding: 0 8vw 64px 8vw;
-      max-width: 1500px;
-      margin: 0 auto;
-    }
-    .lookbook-img {
-      width: 100%; border-radius: 14px;
-      box-shadow: 0 10px 32px 0 rgba(0,0,0,0.22);
-      transition: transform 0.35s cubic-bezier(.44,1.1,.62,1.1), box-shadow .4s;
-      object-fit: cover;
-      aspect-ratio: 4/5;
-      background: #222;
-    }
-    .lookbook-img:hover {
-      transform: scale(1.04);
-      box-shadow: 0 24px 60px 2px rgba(0,0,0,0.37);
-    }
-    @media(max-width:900px){
-      .lookbook-title { font-size:2.0rem;}
-      .lookbook-gallery { gap: 18px; }
-    }
-    @media(max-width:500px){
-      .lookbook-gallery { padding:0 2vw 36px 2vw;}
-    }
-  </style>
-</head>
-<body>
- /* HAMBURGER */
+    /* HAMBURGER */
     .hamburger {
       width: 38px; height: 38px;
       display: flex;
@@ -102,7 +96,66 @@
       0% { opacity: 0; }
       100% { opacity: 1; }
     }
-
+    .lookbook-title {
+      font-family: 'DM Serif Display', serif;
+      font-size: 2.6rem;
+      text-align: center;
+      margin: 70px 0 36px 0;
+      letter-spacing: 0.04em;
+      font-weight: 600;
+    }
+    .lookbook-gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 34px;
+      padding: 0 8vw 64px 8vw;
+      max-width: 1500px;
+      margin: 0 auto;
+    }
+    .lookbook-img {
+      width: 100%; border-radius: 14px;
+      box-shadow: 0 10px 32px 0 rgba(0,0,0,0.22);
+      transition: transform 0.35s cubic-bezier(.44,1.1,.62,1.1), box-shadow .4s;
+      object-fit: cover;
+      aspect-ratio: 4/5;
+      background: #222;
+    }
+    .lookbook-img:hover {
+      transform: scale(1.04);
+      box-shadow: 0 24px 60px 2px rgba(0,0,0,0.37);
+    }
+    @media(max-width:900px){
+      .lookbook-title { font-size:2.0rem;}
+      .lookbook-gallery { gap: 18px; }
+      .navbar { padding: 0 10px;}
+      .nav-left, .nav-right { gap: 18px;}
+    }
+    @media(max-width:500px){
+      .lookbook-gallery { padding:0 2vw 36px 2vw;}
+    }
+  </style>
+</head>
+<body>
+  <!-- 导航栏 -->
+  <nav class="navbar">
+    <div class="nav-left">
+      <button class="hamburger" id="menuBtn" aria-label="Menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <span class="logo">RHB</span>
+    </div>
+    <!-- 右侧按钮可加可不加 -->
+    <!-- <div class="nav-right"> ... </div> -->
+  </nav>
+  <div class="menu-drawer" id="menuDrawer">
+    <a class="menu-link" href="/">Home</a>
+    <a class="menu-link" href="lookbook.html">Lookbook</a>
+    <a class="menu-link" href="shop.html">Shop</a>
+    <a class="menu-link" href="contact.html">Contact</a>
+  </div>
+  <!-- 主内容 -->
   <div class="lookbook-title">LOOKBOOK</div>
   <div class="lookbook-gallery">
     <img class="lookbook-img" src="images/IMG_5297.jpg" alt="Lookbook 1"/>
@@ -110,7 +163,29 @@
     <img class="lookbook-img" src="images/IMG_5369.jpg" alt="Lookbook 3"/>
     <img class="lookbook-img" src="images/IMG_5335.jpg" alt="Lookbook 4"/>
     <img class="lookbook-img" src="images/IMG_5067.jpg" alt="Lookbook 5"/>
-    <!-- 继续添加你的主视觉产品照 -->
+    <!-- 继续添加产品照 -->
   </div>
+  <!-- JS功能：菜单按钮开关 -->
+  <script>
+    const menuBtn = document.getElementById('menuBtn');
+    const menuDrawer = document.getElementById('menuDrawer');
+    let menuOpen = false;
+    menuBtn.addEventListener('click', function(e) {
+      e.stopPropagation();
+      menuOpen = !menuOpen;
+      menuDrawer.classList.toggle('active', menuOpen);
+    });
+    menuDrawer.addEventListener('click', function(e) {
+      menuDrawer.classList.remove('active');
+      menuOpen = false;
+      e.stopPropagation();
+    });
+    document.addEventListener('keydown', function(e) {
+      if (e.key === "Escape" && menuOpen) {
+        menuDrawer.classList.remove('active');
+        menuOpen = false;
+      }
+    });
+  </script>
 </body>
 </html>
