--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,97 @@
   <title>Contact RHB</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=Inter:wght@400;600&display=swap">
   <style>
-    body {
-      background: #181818; color: #fff;
+    :root {
+      --black: #181818;
+      --white: #fff;
+      --gray: #b8b8b8;
+      --header-h: 60px;
+      --radius: 14px;
+    }
+    html, body {
+      background: var(--black);
+      color: var(--white);
       font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+      font-size: 18px;
       margin: 0; padding: 0;
       min-height: 100vh;
       letter-spacing: 0.02em;
+      overflow-x: hidden;
     }
-    .navbar { /* 同上，可略 */ }
+    .navbar {
+      position: fixed;
+      top: 0; left: 0; width: 100vw; height: var(--header-h);
+      z-index: 20;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: rgba(24,24,24, 0.2);
+      backdrop-filter: blur(8px);
+      padding: 0 36px;
+      box-sizing: border-box;
+    }
+    .nav-left, .nav-right {
+      display: flex;
+      align-items: center;
+      gap: 30px;
+    }
+    .logo {
+      font-family: 'DM Serif Display', serif;
+      font-size: 2.1rem;
+      font-weight: 600;
+      letter-spacing: 0.03em;
+      color: var(--white);
+      cursor: pointer;
+      user-select: none;
+    }
+    .hamburger {
+      width: 38px; height: 38px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      background: none;
+      border: none;
+      z-index: 999;
+      position: relative;
+    }
+    .hamburger span {
+      display: block;
+      width: 28px;
+      height: 3px;
+      background: var(--white);
+      margin: 4px 0;
+      border-radius: 2px;
+      transition: 0.3s;
+    }
+    .menu-drawer {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(24,24,24,0.92);
+      z-index: 30;
+      display: none;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      padding: 80px 48px 48px 48px;
+      animation: menuFade 0.4s;
+    }
+    .menu-drawer.active { display: flex; }
+    .menu-drawer .menu-link {
+      color: var(--white);
+      font-size: 2.2rem;
+      font-family: 'DM Serif Display', serif;
+      margin: 0 0 18px 0;
+      opacity: 0.92;
+      text-decoration: none;
+      letter-spacing: 0.03em;
+      transition: color 0.2s;
+    }
+    .menu-drawer .menu-link:hover { color: var(--gray); }
+    @keyframes menuFade {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
     .contact-wrap {
       max-width: 540px;
       margin: 90px auto 0 auto;
@@ -70,6 +153,10 @@
     .contact-btn:hover {
       background: #fff; color: #111;
     }
+    @media(max-width:900px){
+      .navbar { padding: 0 10px;}
+      .nav-left, .nav-right { gap: 18px;}
+    }
     @media(max-width:600px){
       .contact-wrap {padding:18px 7vw 24px 7vw;}
       .contact-title{font-size:1.3rem;}
@@ -77,7 +164,24 @@
   </style>
 </head>
 <body>
-  <!-- 可插入navbar -->
+  <!-- 导航栏 -->
+  <nav class="navbar">
+    <div class="nav-left">
+      <button class="hamburger" id="menuBtn" aria-label="Menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <span class="logo">RHB</span>
+    </div>
+  </nav>
+  <div class="menu-drawer" id="menuDrawer">
+    <a class="menu-link" href="/">Home</a>
+    <a class="menu-link" href="lookbook.html">Lookbook</a>
+    <a class="menu-link" href="shop.html">Shop</a>
+    <a class="menu-link" href="contact.html">Contact</a>
+  </div>
+  <!-- 联系方式内容 -->
   <div class="contact-wrap">
     <div class="contact-title">Contact Us</div>
     <div class="contact-desc">
@@ -91,5 +195,20 @@
       <button class="contact-btn" type="submit">Send</button>
     </form>
   </div>
-</body>
-</html>
+  <!-- 菜单JS -->
+  <script>
+    const menuBtn = document.getElementById('menuBtn');
+    const menuDrawer = document.getElementById('menuDrawer');
+    let menuOpen = false;
+    menuBtn.addEventListener('click', function(e) {
+      e.stopPropagation();
+      menuOpen = !menuOpen;
+      menuDrawer.classList.toggle('active', menuOpen);
+    });
+    menuDrawer.addEventListener('click', function(e) {
+      menuDrawer.classList.remove('active');
+      menuOpen = false;
+      e.stopPropagation();
+    });
+    document.addEventListener('keydown', function(e) {
+      if (e.key === "Es
