--- a/contact.html
+++ b/contact.html
@@ -190,14 +190,14 @@
       我们欢迎各类合作及咨询，欢迎随时联系。
     </div>
     <form class="contact-form" autocomplete="off" name="contact" method="POST" data-netlify="true">
-      <input type="text" name="name" placeholder="Your Name / 姓名" required>
-      <input type="email" name="email" placeholder="Email / 邮箱" required>
-      <textarea name="message" placeholder="Message / 留言" required></textarea>
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <textarea name="message" placeholder="Message " required></textarea>
       <button class="contact-btn" type="submit">Send</button>
     </form>
   </div>
 
-  <!-- 菜单JS：与lookbook完全一致 -->
+  <!-- 菜单JS -->
   <script>
     const menuBtn = document.getElementById('menuBtn');
     const menuDrawer = document.getElementById('menuDrawer');
