--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
   <div class="menu-drawer" id="menuDrawer">
     <a class="menu-link" href="/">Home</a>
     <a class="menu-link" href="lookbook.html">Lookbook</a>
-    <a class="menu-link" href="shop.html">Shop</a>
+    <a class="menu-link" href="https://shop.rhb.co.com">Shop</a>
     <a class="menu-link" href="contact.html">Contact</a>
   </div>
 
