--- a/lookbook.html
+++ b/lookbook.html
@@ -160,10 +160,10 @@
   <div class="lookbook-title">LOOKBOOK</div>
   <div class="lookbook-gallery">
     <img class="lookbook-img" src="images/IMG_5297.jpg" alt="Lookbook 1"/>
-    <img class="lookbook-img" src="images/IMG_5326.jpg" alt="Lookbook 2"/>
+    <img class="lookbook-img" src="images/1.jpg" alt="Lookbook 2"/>
     <img class="lookbook-img" src="images/IMG_5369.jpg" alt="Lookbook 3"/>
-    <img class="lookbook-img" src="images/IMG_5335.jpg" alt="Lookbook 4"/>
-    <img class="lookbook-img" src="images/IMG_5067.jpg" alt="Lookbook 5"/>
+    <img class="lookbook-img" src="images/IMG_4991.jpg" alt="Lookbook 4"/>
+    <img class="lookbook-img" src="images/IMG_5331.jpg" alt="Lookbook 5"/>
     <!-- 继续添加产品图片 -->
   </div>
 
