--- a/index.html
+++ b/index.html
@@ -235,9 +235,12 @@
   <!-- HERO SLIDER -->
 <div class="hero-slider" id="heroSlider">
   <!-- slides: 可添加多张大图+文本 -->
-  <div class="slide active" style="background-image:url('images/IMG_5297.jpg')">
-    <div class="slide-txt">THIS IS NOT JUST A SHOE.<br>IT'S A SCULPTURE YOU WALK IN.</div>
-  </div>
+<div class="slide active">
+  <video autoplay muted loop playsinline preload="auto" style="width:100vw; height:100vh; object-fit:cover;">
+    <source src="images/RHB_full.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+</div>
   <div class="slide" style="background-image:url('images/IMG_5369.jpg')">
     <div class="slide-txt">BLACK FLUIDITY<br>
       <span style="font-size:1.3rem;font-family:'Inter',sans-serif;opacity:.7;">
