--- a/index.html
+++ b/index.html
@@ -235,25 +235,13 @@
   <!-- HERO SLIDER -->
 <div class="hero-slider" id="heroSlider">
   <!-- slides: 可添加多张大图+文本 -->
-<div class="slide active">
-  <video autoplay muted loop playsinline preload="auto" style="width:100vw; height:100vh; object-fit:cover;">
+  <div class="hero-video">
+  <video autoplay muted loop playsinline preload="auto" style="width:100vw; height:100vh; object-fit:cover; display:block;">
     <source src="images/RHB_full.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
 </div>
-  <div class="slide" style="background-image:url('images/IMG_5369.jpg')">
-    <div class="slide-txt">BLACK FLUIDITY<br>
-      <span style="font-size:1.3rem;font-family:'Inter',sans-serif;opacity:.7;">
-        The unpredictable form of style
-      </span>
-    </div>
-  </div>
-  <div class="slide" style="background-image:url('images/3.jpg')">
-    <div class="slide-txt">MONOCHROME, BUT NEVER MONOTONE</div>
-  </div>
-  <!-- 把圆点独立放在slides外面！ -->
-  <div class="slider-dots" id="sliderDots"></div>
-</div>
+
  
   <script>
     // HERO SLIDER
