--- a/index.html
+++ b/index.html
@@ -308,9 +308,15 @@ document.addEventListener('keydown', function(e) {
   }
 });
 
-renderDots(); // 启用slider
+renderDots();
+showSlide(curIdx);  // optional 初始化
 
-
+// 让每个 slide 也可点击切换
+slides.forEach((slide, index) => {
+  slide.addEventListener('click', () => {
+    showSlide(index);
+  });
+});
 
   </script>
 </body>
