--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   </div>
 
   <!-- Slide 2: Image -->
-  <div class="slide" style="background-image:url('images/hero.jpg')">
+  <div class="slide" style="background-image:url('images/hero.png')">
     <!-- 可加文字也可不加 -->
     <!-- <div class="slide-txt">YOUR TEXT HERE</div> -->
   </div>
