--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
         <span></span>
         <span></span>
       </button>
-      <span class="logo">RHB</span>
+    <a href="/" class="logo">
+      <img src="images/logo.png" alt="RHB Logo" style="height:32px;">
+    </a>
+
     </div>
     <div class="nav-right">
       <button class="nav-ic" aria-label="Search">
