--- a/index.html
+++ b/index.html
@@ -208,9 +208,10 @@
         <span></span>
         <span></span>
       </button>
-    <a href="/" class="logo">
-      <img src="images/logo.png" alt="RHB Logo" style="height:32px;">
+   <a href="/" class="logo">
+    <img src="images/logo.png" alt="RHB Logo" style="max-height: 60px;">
     </a>
+
 
     </div>
     <div class="nav-right">
