--- a/lookbook.html
+++ b/lookbook.html
@@ -148,7 +148,7 @@
         <span></span>
         <span></span>
       </button>
-      <span class="logo">RHB</span>
+     <img src="images/logo.png" alt="RHB Logo" style="height: 60px; object-fit: contain;">
     </div>
   </nav>
   <div class="menu-drawer" id="menuDrawer">
