--- a/contact.html
+++ b/contact.html
@@ -173,7 +173,7 @@
         <span></span>
         <span></span>
       </button>
-      <span class="logo">RHB</span>
+      <img src="images/logo.png" alt="RHB Logo" style="height: 60px; object-fit: contain;">
     </div>
   </nav>
   <div class="menu-drawer" id="menuDrawer">
