--- a/contact.html
+++ b/contact.html
@@ -6,164 +6,10 @@
   <title>Contact RHB</title>
    <link rel="icon" href="favicon.png" type="image/png" /> 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=Inter:wght@400;600&display=swap">
-  <style>
-    :root {
-      --black: #181818;
-      --white: #fff;
-      --gray: #b8b8b8;
-      --header-h: 60px;
-      --radius: 14px;
-    }
-    html, body {
-      background: var(--black);
-      color: var(--white);
-      font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
-      font-size: 18px;
-      margin: 0; padding: 0;
-      min-height: 100vh;
-      letter-spacing: 0.02em;
-      overflow-x: hidden;
-    }
-    .navbar {
-      position: fixed;
-      top: 0; left: 0; width: 100vw; height: var(--header-h);
-      z-index: 20;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: rgba(24,24,24, 0.2);
-      backdrop-filter: blur(8px);
-      padding: 0 36px;
-      box-sizing: border-box;
-    }
-    .nav-left, .nav-right {
-      display: flex;
-      align-items: center;
-      gap: 30px;
-    }
-    .logo {
-      font-family: 'DM Serif Display', serif;
-      font-size: 2.1rem;
-      font-weight: 600;
-      letter-spacing: 0.03em;
-      color: var(--white);
-      cursor: pointer;
-      user-select: none;
-    }
-    .hamburger {
-      width: 38px; height: 38px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      background: none;
-      border: none;
-      z-index: 999;
-      position: relative;
-    }
-    .hamburger span {
-      display: block;
-      width: 28px;
-      height: 3px;
-      background: var(--white);
-      margin: 4px 0;
-      border-radius: 2px;
-      transition: 0.3s;
-    }
-    .menu-drawer {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(24,24,24,0.92);
-      z-index: 30;
-      display: none;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-      padding: 80px 48px 48px 48px;
-      animation: menuFade 0.4s;
-    }
-    .menu-drawer.active { display: flex; }
-    .menu-drawer .menu-link {
-      color: var(--white);
-      font-size: 2.2rem;
-      font-family: 'DM Serif Display', serif;
-      margin: 0 0 18px 0;
-      opacity: 0.92;
-      text-decoration: none;
-      letter-spacing: 0.03em;
-      transition: color 0.2s;
-    }
-    .menu-drawer .menu-link:hover { color: var(--gray); }
-    @keyframes menuFade {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
-    }
-    .contact-wrap {
-      max-width: 540px;
-      margin: 90px auto 0 auto;
-      background: rgba(40,40,40,0.91);
-      border-radius: 18px;
-      box-shadow: 0 8px 28px 2px rgba(0,0,0,0.23);
-      padding: 42px 38px 38px 38px;
-    }
-    .contact-title {
-      font-family: 'DM Serif Display', serif;
-      font-size: 2.2rem;
-      letter-spacing: 0.05em;
-      text-align: center;
-      margin-bottom: 18px;
-      font-weight: 600;
-    }
-    .contact-desc {
-      text-align: center;
-      font-size: 1.09rem;
-      color: #d4d4d4;
-      margin-bottom: 30px;
-      letter-spacing: 0.04em;
-    }
-    .contact-form {
-      display: flex; flex-direction: column; gap: 20px;
-    }
-    .contact-form input, .contact-form textarea {
-      padding: 12px 14px;
-      background: #232323; color: #fff;
-      border: 1px solid #3d3d3d;
-      border-radius: 7px;
-      font-size: 1.06rem;
-      font-family: inherit;
-      letter-spacing: 0.02em;
-      outline: none;
-      transition: border .22s;
-    }
-    .contact-form input:focus, .contact-form textarea:focus {
-      border: 1.5px solid #fff;
-      background: #282828;
-    }
-    .contact-form textarea { min-height: 90px; resize: vertical; }
-    .contact-btn {
-      margin-top: 16px;
-      padding: 12px 0;
-      background: linear-gradient(90deg, #222 30%, #fff 90%);
-      color: #181818;
-      border: none; border-radius: 7px;
-      font-size: 1.12rem; font-weight: 600;
-      cursor: pointer;
-      letter-spacing: 0.06em;
-      transition: background 0.27s, color 0.19s;
-    }
-    .contact-btn:hover {
-      background: #fff; color: #111;
-    }
-    @media(max-width:900px){
-      .navbar { padding: 0 10px;}
-      .nav-left, .nav-right { gap: 18px;}
-    }
-    @media(max-width:600px){
-      .contact-wrap {padding:18px 7vw 24px 7vw;}
-      .contact-title{font-size:1.3rem;}
-    }
-  </style>
-</head>
+  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=Inter:wght@400;600&display=swap">
+  <link rel="stylesheet" href="style.css">
+  </head>
 <body>
   <!-- 导航栏 -->
   <nav class="navbar">
