--- a/lookbook.html
+++ b/lookbook.html
@@ -4,140 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>RHB Lookbook</title>
-    <link rel="icon" href="favicon.png" type="image/png" />
+   <link rel="icon" href="favicon.png" type="image/png" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=Inter:wght@400;600&display=swap">
-  <style>
-    :root {
-      --black: #181818;
-      --white: #fff;
-      --gray: #b8b8b8;
-      --header-h: 60px;
-      --radius: 14px;
-    }
-    html, body {
-      background: var(--black);
-      color: var(--white);
-      font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
-      font-size: 18px;
-      margin: 0; padding: 0;
-      min-height: 100vh;
-      letter-spacing: 0.02em;
-      overflow-x: hidden;
-    }
-    .navbar {
-      position: fixed;
-      top: 0; left: 0; width: 100vw; height: var(--header-h);
-      z-index: 20;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: rgba(24,24,24, 0.2);
-      backdrop-filter: blur(8px);
-      padding: 0 36px;
-      box-sizing: border-box;
-    }
-    .nav-left, .nav-right {
-      display: flex;
-      align-items: center;
-      gap: 30px;
-    }
-    .logo {
-      font-family: 'DM Serif Display', serif;
-      font-size: 2.1rem;
-      font-weight: 600;
-      letter-spacing: 0.03em;
-      color: var(--white);
-      cursor: pointer;
-      user-select: none;
-    }
-    .hamburger {
-      width: 38px; height: 38px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      background: none;
-      border: none;
-      z-index: 999;
-      position: relative;
-    }
-    .hamburger span {
-      display: block;
-      width: 28px;
-      height: 3px;
-      background: var(--white);
-      margin: 4px 0;
-      border-radius: 2px;
-      transition: 0.3s;
-    }
-    .menu-drawer {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(24,24,24,0.92);
-      z-index: 30;
-      display: none;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-      padding: 80px 48px 48px 48px;
-      animation: menuFade 0.4s;
-    }
-    .menu-drawer.active { display: flex; }
-    .menu-drawer .menu-link {
-      color: var(--white);
-      font-size: 2.2rem;
-      font-family: 'DM Serif Display', serif;
-      margin: 0 0 18px 0;
-      opacity: 0.92;
-      text-decoration: none;
-      letter-spacing: 0.03em;
-      transition: color 0.2s;
-    }
-    .menu-drawer .menu-link:hover { color: var(--gray); }
-    @keyframes menuFade {
-      0% { opacity: 0; }
-      100% { opacity: 1; }
-    }
-    .lookbook-title {
-      font-family: 'DM Serif Display', serif;
-      font-size: 2.6rem;
-      text-align: center;
-      margin: 90px 0 36px 0;
-      letter-spacing: 0.04em;
-      font-weight: 600;
-    }
-    .lookbook-gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 34px;
-      padding: 0 8vw 64px 8vw;
-      max-width: 1500px;
-      margin: 0 auto;
-    }
-    .lookbook-img {
-    width: 100%;
-    border-radius: 0; /* ← 改成直角 */
-    box-shadow: 0 10px 32px 0 rgba(0,0,0,0.22);
-    transition: transform 0.35s cubic-bezier(.44,1.1,.62,1.1), box-shadow .4s;
-    object-fit: cover;
-    aspect-ratio: 4/5;
-    background: #222;
-    display: block;
-      }
-    .lookbook-img:hover {
-      transform: scale(1.04);
-      box-shadow: 0 24px 60px 2px rgba(0,0,0,0.37);
-    }
-    @media(max-width:900px){
-      .lookbook-title { font-size:2.0rem;}
-      .lookbook-gallery { gap: 18px; }
-      .navbar { padding: 0 10px;}
-      .nav-left, .nav-right { gap: 18px;}
-    }
-    @media(max-width:500px){
-      .lookbook-gallery { padding:0 2vw 36px 2vw;}
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- 导航栏 -->
